--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.4.0",
+    "bcryptjs": "^3.0.2",
     "mongoose": "^8.16.5",
     "next": "15.4.4",
     "react": "19.1.0",
