--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
   },
   "dependencies": {
     "@react-email/components": "^0.4.0",
+    "ai": "^5.0.8",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.1",
     "mongoose": "^8.16.5",
     "next": "15.4.4",
     "next-auth": "^4.24.11",
+    "openai": "^5.12.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "resend": "^4.7.0",
+    "tsx": "^4.20.3",
     "zod": "^4.0.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
