--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@react-email/components": "^0.4.0",
     "ai": "^5.0.8",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
+    "lucide-react": "^0.539.0",
     "mongoose": "^8.16.5",
     "next": "15.4.4",
     "next-auth": "^4.24.11",
@@ -20,8 +23,10 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "resend": "^4.7.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.3",
-    "zod": "^4.0.10"
+    "zod": "^3.25.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -31,7 +36,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
